JGlideMon ChangeLog

Version 0.12
------------
- Added Public Chat tab to the Chat tab that contains only
  chat from the public channels (i.e. General/Trade)
- Added ability to parse Glider chat and combat log files.
  Accessed via File->Parse Log File. After you select a file
  from the file chooser, it will automatically select Chat or
  Combat as the log type if the file name contains the word 
  Chat or Combat. If the log file is named something else,
  you will need to manually select the correct type. Note 
  that the timestamps are only accurate to the minute, since
  this is how they are stored when Glider makes the log files.
  Also, the estimated gold/hour on the loot tab wil not be
  accurate since that is calculated in realtime.

Version 0.11
------------
- Added an embedded webserver. It is disabled by default. See
  the Web tab in the configuration dialog to enable it. The
  default port is 3201; visit http://localhost:3201 to view it.
  You will need to forward this port if you are behind a router
  in order to view it from a remote location. Note that this is
  still in a very early stage and is not the highest priority
  feature. For now it's read-only and shows your status. It is
  based on my original PHP-based monitor, which others have
  improved upon.
- Clicking on an item on the Loot tab will open a browser window
  to the Allakhazam page for that item. You can change the site that
  is opened in the General tab of the configuration dialog. Wowhead,
  Thottbot, and Allakhazam are already in the combo box. If you want
  to add a different url, %s will be replaced with the item id.
- Added an auto-scale feature for the screenshot that should adjust
  the scale whenever you resize the window. This takes effect the next
  time the screenshot is updated. This is enabled by default and can be
  disabled via the screenshot options tab.
- Added a tab that graphs your health, mana, and target's health over
  time.